--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -15,7 +15,7 @@
 
     <div class="text-center">
         <h1 class="display-4">My favorite song</h1>
-        <p>Learn about <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">The Greatest Song Made</a>.</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
     </div>
 
     <style>
